--- a/html/home.html
+++ b/html/home.html
@@ -57,7 +57,7 @@
       <div id="skills"></div>
       <h1 class="title"><span class="animated-text" style="--delay: 0.2s">Farhan</span> <span class="animated-text" style="--delay: 0.3s">Ahmed</span></h1>
       <div class="subtitle fade-in">
-          <p><span class="highlight-link">Forward Thinking Designer</span></p>
+          <p>Forward Thinking Designer</p>
       </div>
       <div class="arrow bounce" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000" data-aos-offset="-300"><a href="#my-work"><i class="fa fa-angle-down fa-3x" aria-hidden="true"></i></a>
       </div>
@@ -102,7 +102,7 @@
                   Mitigating Toxicity in Gaming
                 </h4>
                 <h5 class="card-subtitle">
-                  UX Research, Game Design, Psychology
+                  Game UX/UI Design, UX Research, Psychology
                 </h5>
                 <p class="card-content">
                   Researching and designing solutions to reduce toxicity in online gaming communities.
@@ -120,10 +120,28 @@
                   Busy Bees by Bumble
                 </h4>
                 <h5 class="card-subtitle">
-                  UX Design, UX Research, Design Feature
+                  UX/UI Design, UX Research, Design Feature
                 </h5>
                 <p class="card-content">
                   Designing a new feature for Bumble to help busy users plan a date. 
+                </p>
+              </div>
+            </div>
+          </li>
+        </a>
+
+        <a href="./works/ubapp.html">
+          <li data-aos="fade-up" data-aos-duration="600"  class="thumbnail-grid-item">
+            <div class="card" style="background-image: url(../assets/ubapp/Thumbnail.png); background-size: contain; background-repeat: no-repeat;">
+              <div class="card-pants">
+                <h4 class="card-title">
+                  UB Mobile App Redesign
+                </h4>
+                <h5 class="card-subtitle">
+                  Product Design, UX Research
+                </h5>
+                <p class="card-content">
+                  Solving the most critical issues plaguing University at Buffalo's mobile app. 
                 </p>
               </div>
             </div>
