--- a/html/works/fordscooter.html
+++ b/html/works/fordscooter.html
@@ -144,7 +144,7 @@
                   <h4>Timeline</h4>
                   <p>Aug. 2023 - Dec. 2023</p>
                   <h4>Team Members</h4>
-                  <p>Farhan Ahmed, Michelle Dang (UX Designer), Alex Pravat (UX Researcher & Designer)</p>
+                  <p>Michelle Dang (UX Designer), Alex Pravat (UX Researcher & Designer)</p>
                   <h4></h4>
                   <h4>Client</h4>
                   <p>Course Project Given by Ford Motor Company</p>
