--- a/html/home.html
+++ b/html/home.html
@@ -94,12 +94,30 @@
           </li>
         </a>
 
+        <a href="./works/ubapp.html">
+          <li data-aos="fade-up" data-aos-duration="600"  class="thumbnail-grid-item">
+            <div class="card" style="background-image: url(../assets/ubapp/Thumbnail.png); background-size: contain; background-repeat: no-repeat;">
+              <div class="card-pants">
+                <h4 class="card-title">
+                  UB Mobile App Redesign
+                </h4>
+                <h5 class="card-subtitle">
+                  Product Design, UX Research
+                </h5>
+                <p class="card-content">
+                  Solving the most critical issues plaguing University at Buffalo's mobile app. 
+                </p>
+              </div>
+            </div>
+          </li>
+        </a>
+
         <a href="./works/league//.html">
           <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
             <div class="card"  style="background-image: url(../assets/league/Thumbnail.jpg); background-size: contain; background-repeat: no-repeat;">
               <div class="card-pants">
                 <h4 class="card-title">
-                  Mitigating Toxicity in Gaming
+                  Under Construction :)
                 </h4>
                 <h5 class="card-subtitle">
                   Game UX/UI Design, UX Research, Psychology
@@ -117,31 +135,13 @@
             <div class="card" style="background-image: url(../assets/busy_bee/Thumnail.png); background-size: contain; background-repeat: no-repeat;">
               <div class="card-pants">
                 <h4 class="card-title">
-                  Busy Bees by Bumble
+                  Under Construction :)
                 </h4>
                 <h5 class="card-subtitle">
                   UX/UI Design, UX Research, Design Feature
                 </h5>
                 <p class="card-content">
                   Designing a new feature for Bumble to help busy users plan a date. 
-                </p>
-              </div>
-            </div>
-          </li>
-        </a>
-
-        <a href="./works/ubapp.html">
-          <li data-aos="fade-up" data-aos-duration="600"  class="thumbnail-grid-item">
-            <div class="card" style="background-image: url(../assets/ubapp/Thumbnail.png); background-size: contain; background-repeat: no-repeat;">
-              <div class="card-pants">
-                <h4 class="card-title">
-                  UB Mobile App Redesign
-                </h4>
-                <h5 class="card-subtitle">
-                  Product Design, UX Research
-                </h5>
-                <p class="card-content">
-                  Solving the most critical issues plaguing University at Buffalo's mobile app. 
                 </p>
               </div>
             </div>
