figma-ubapp-link-update

--- a/html/works/ubapp.html
+++ b/html/works/ubapp.html
@@ -416,7 +416,7 @@
               <h3>Prototype</h3>
               <hr>
                 <div class="subgroup">
-                  <iframe style="transform: scale(0.75)" class="hidden-xs"width="600" height="930" src="https://www.figma.com/proto/n4rrvJMXxPNFzNPih1x83K/UB-Mobile-App-Redesign?page-id=0%3A1&node-id=182-7&viewport=502%2C477%2C0.36&t=wjWST79tXSlfu1P4-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=182%3A7" frameborder="0" allowfullscreen></iframe>
+                  <iframe style="transform: scale(0.75)" class="hidden-xs"width="600" height="930" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fn4rrvJMXxPNFzNPih1x83K%2FUB-Mobile-App-Redesign%3Fpage-id%3D0%253A1%26node-id%3D31-2%26viewport%3D704%252C583%252C0.19%26t%3DXVwMeoSKhNHoD84O-1%26scaling%3Dscale-down%26content-scaling%3Dfixed%26starting-point-node-id%3D182%253A7" frameborder="0" allowfullscreen></iframe>
                 </div>
             </section>
 
