--- a/html/works/ubapp.html
+++ b/html/works/ubapp.html
@@ -124,7 +124,7 @@
               <hr>
               <div id="problem" class="subgroup">
                 <h4>Problem</h4>
-                <p>University at Buffalo's began a design of it's entire mobile application with the vision of becoming an highly used mobile app by current students. It's current mobile application is inadequate in terms of both functionality and user experience, resulting in low usage among students. The mobile app's deficiencies <span class="highlight highlight-ubapp">include poor usability, an absence of comprehensive content integration, and a tendency for navigation to be hindered by technical malfunctions.</span></p>
+                <p>University at Buffalo began a redesign process of it's entire mobile application with the vision of becoming a highly used mobile app by current students. It's current mobile application is inadequate in terms of both functionality and user experience, resulting in low usage among students. The mobile app's deficiencies <span class="highlight highlight-ubapp">include poor usability, an absence of comprehensive content integration, and a tendency for navigation to be hindered by technical malfunctions.</span></p>
               </div>
           </section>
         </div>
