about-me-changes

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -76,10 +76,10 @@
                 <h5 class="about-h5">Designer & Builder</h5>
                 <p class="small-margin-bottom">I am a forward-thinking designer dedicated to creating works that improve people's lives.<br><br>
 
-                With a Bachelors degree in Cognitive Science from UB, I'm currently working on my Masters degree in Human-Computer Interaction at CMU and working with NASA for my MHCI capstone as a UX Engineer. I've also worked as a web developer for 2 years where I've designed and programmed multiple sites.  <br><br>
-
+                  <span class="highlight highlight-about">I hold a Bachelor's degree in Cognitive Science with a minor in Computer Science from the University at Buffalo</span>, and a <span class="highlight highlight-about">Master's degree in Human-Computer Interaction from Carnegie Mellon University.</span> My professional experience includes roles as a Product Designer, UX Engineer, and Web Developer, gained during <span class="highlight highlight-about">my time at NASA Ames Research Center and National Fuel Gas.</span>
+                  <br><br>
                 
-                I am very much a big-picture thinker and enjoy working on products end to end, from research all the way to development. I bring a unique, cross-functional picture to every project with my background in research, programming, and design. 
+                  I am very much a big-picture thinker and enjoy working on products end to end, from research all the way to development. I bring a unique, cross-functional picture to every project with my background in research, programming, and design. 
                 </p>
               </div>
               <!-- <br> -->
@@ -88,11 +88,11 @@
                 <h5 class="about-h5">Values</h5>
                 <p class="small-margin-bottom">I believe values is what makes or breaks a person. Whether it's in my personal life or my professional career, these values hold a great importance to me. <br><br>
 
-                Humility: Being open minded and admitting when you're wrong is an important factor to me as a person. It allows me to grow in many different aspects as a person and all the roles I play in my life.  It doesn't matter where you stand in life, anyone and everyone can be wrong, and that's ok. <br><br>
+                  <span class="highlight highlight-about">Humility:</span> Being open minded and admitting when you're wrong is an important factor to me as a person. It allows me to grow in many different aspects as a person and all the roles I play in my life.  <span class="highlight highlight-about">It doesn't matter where you stand in life, anyone and everyone can be wrong, and that's ok.</span> <br><br>
 
-                Enjoyment: An often overlooked idea in general life is the enjoyment of what you do. To me, if I don't enjoy something, I move on. Of course, you can't enjoy everything every time but if you get to a point where  you don't find something fun, I think it's important to recognize that and move forward. <br><br>
+                  <span class="highlight highlight-about">Enjoyment:</span> An often overlooked idea in general life is the enjoyment of what you do. To me, if I don't enjoy something, I move on. Of course, you can't enjoy everything every time but if you get to a point where  you don't find something fun, I think it's important to recognize that and move forward. <br><br>
 
-                Honesty: I am firm believer that the truth will always prevail. I very much value telling and being told the truth, there's no reason to hide it since it will come out at some point :/
+                  <span class="highlight highlight-about">Honesty:</span> I am firm believer that the truth will always prevail. I very much value telling and being told the truth, there's no reason to hide it since it will come out at some point :/
 
                 </p>
               </div>
@@ -100,9 +100,9 @@
               <!-- <br> -->
               <div class="subgroup">
                 <h5 class="about-h5">Hobbies & Interests</h5>
-                <p>Going to the Gym: Everyday I go to the gym and it's one of my favorite parts of my day. My favorite compound movement is the deadlift! I also really enjoy bench pressing although I can't say I'm all that impressive at it. As for muscle groups, I really enjoy bicep-oriented movements such as behind the back cable curls, reverse curls, and the classic barbell curls. <br><br>
+                <p><span class="highlight highlight-about">Going to the Gym:</span> Everyday I go to the gym and it's one of my favorite parts of my day. My favorite compound movement is the deadlift! I also really enjoy bench pressing although I can't say I'm all that impressive at it. As for muscle groups, I really enjoy bicep-oriented movements such as behind the back cable curls, reverse curls, and the classic barbell curls. <br><br>
 
-                Trying New Things: I love exploring new places, trying new experiences, and tasting different foods. I consider myself adventurous and willing to step outside my comfort zone, as long as it doesn't compromise my values.
+                  <span class="highlight highlight-about">Trying New Things:</span> I love exploring new places, trying new experiences, and tasting different foods. I consider myself adventurous and willing to step outside my comfort zone, as long as it doesn't compromise my values.
               </p>
               </div>
             </div>
@@ -112,7 +112,7 @@
               <br><br><br>
               <div class="content-box-side">
                 <h5 class="about-subtitle">Contact</h5>
-                <a href="mailto:mdfarhaa@andrew.cmu.edu"><p>mdfarhaa@andrew.cmu.edu</p></a>
+                <a href="mailto:kaizufarhan@gmail.com"><p>kaizufarhan@gmail.com</p></a>
               </div>
               <br><br>
               <div class="content-box-side">
