--- a/html/about-me.html
+++ b/html/about-me.html
@@ -133,7 +133,7 @@
         <div class="footer-icons col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <p>
             <a href="https://www.linkedin.com/in/farhanahmed45/" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
-            <a href="mailto:mdfarhaa@andrew.cmu.edu" target="_blank"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
+            <a href="mailto:kaizufarhan@gmail.com" target="_blank"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
           </p>
           <br>
           <!-- <p class="footer-text-small">Tony Yanfeng Jin © 2017-2018 All Rights Reserved</p> -->
