--- a/html/Footer.html
+++ b/html/Footer.html
@@ -3,6 +3,6 @@
 </div>
 <div class="footer-icons col-xs-12 col-sm-12 col-md-12 col-lg-12">
   <p><a href="https://www.linkedin.com/in/farhanahmed45/"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
-  <a href="mailto:mdfarhaa@andrew.cmu.edu"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a></p>
+  <a href="mailto:kaizufarhan@gmail.com"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a></p>
 
 </div>
