--- a/html/about-me.html
+++ b/html/about-me.html
@@ -79,14 +79,14 @@
                   <span class="highlight highlight-about">I hold a Bachelor's degree in Cognitive Science with a minor in Computer Science from the University at Buffalo</span>, and a <span class="highlight highlight-about">Master's degree in Human-Computer Interaction from Carnegie Mellon University.</span> My professional experience includes roles as a Product Designer, UX Engineer, and Web Developer, gained during <span class="highlight highlight-about">my time at NASA Ames Research Center and National Fuel Gas.</span>
                   <br><br>
                 
-                  I am very much a big-picture thinker and enjoy working on products end to end, from research all the way to development. I bring a unique, cross-functional picture to every project with my background in research, programming, and design. 
+                  I am very much a big-picture thinker and enjoy working on products end to end, from research all the way to development. I bring unique, cross-functional insights to every project with my background in research, programming, and design. 
                 </p>
               </div>
               <!-- <br> -->
               <!-- <br> -->
               <div class="subgroup">
                 <h5 class="about-h5">Values</h5>
-                <p class="small-margin-bottom">I believe values is what makes or breaks a person. Whether it's in my personal life or my professional career, these values hold a great importance to me. <br><br>
+                <p class="small-margin-bottom">I believe values are what makes or breaks a person. Whether it's in my personal life or my professional career, these values hold a great importance to me. <br><br>
 
                   <span class="highlight highlight-about">Humility:</span> Being open minded and admitting when you're wrong is an important factor to me as a person. It allows me to grow in many different aspects as a person and all the roles I play in my life.  <span class="highlight highlight-about">It doesn't matter where you stand in life, anyone and everyone can be wrong, and that's ok.</span> <br><br>
 
