--- a/html/home.html
+++ b/html/home.html
@@ -70,11 +70,27 @@
     <br/>
     <br/>
 
-
-
     <div class="container-fluid col-centered" id="my-work">
 
       <ul class="thumbnail-grid">
+
+        <a href="./works/nasa.html">
+          <li data-aos="fade-up" data-aos-duration="600"  class="thumbnail-grid-item">
+            <div class="card" style="background-image: url(../assets/nasa/thumbnail.png); background-size: contain; background-repeat: no-repeat;">
+              <div class="card-pants">
+                <h4 class="card-title">
+                  NASA: Design for Anomalies
+                </h4>
+                <h5 class="card-subtitle">
+                  Product Design, UX Engineering, Research
+                </h5>
+                <p class="card-content">
+                  I designed & developed tools for NASA researchers to simulate time-critical anomalies. 
+                </p>
+              </div>
+            </div>
+          </li>
+        </a>
 
         <a href="./works/fordscooter.html">
           <li data-aos="fade-up" data-aos-duration="600"  class="thumbnail-grid-item">
