--- a/html/works/ubapp.html
+++ b/html/works/ubapp.html
@@ -108,6 +108,8 @@
 
         <div class="bg bg-ubapp" data-aos="fade-up" data-aos-duration="600"></div>
         <div class="jumbotron" data-aos="fade-up" data-aos-duration="600">
+          <div class="jumbotron-text">
+          </div>
         </div>
 
 
