--- a/html/home.html
+++ b/html/home.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKFSQ82EQN"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZKFSQ82EQN');
+    </script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=false">
     <title>Farhan Ahmed</title>
