roborun-design-process

--- a/html/works/nasa.html
+++ b/html/works/nasa.html
@@ -124,6 +124,7 @@
                   <!-- <li><a href="#roborun-video">Robo Run</a></li> -->
                   <li><a href="#roborun-task">Robo Run Task</a></li>
                   <li><a href="#howtoplay-roborun">How to Play</a></li>
+                  <li><a href="#designprocess">Design Process</a></li>
                 </ul>
               </li>
 
@@ -834,7 +835,23 @@
               <div id="howtoplay-roborun" class="subgroup">
                 <h4>How to Play Robo Run</h4>
                 <img class="img-responsive full-img"src="../../assets/nasa/howtoplay-roborun.png" data-aos="fade-up" data-aos-duration="600"> 
+                <br><br>
               </div>
+
+              <div id="designprocess" class="subgroup">
+                <h4>Design Process of Robo Run</h4>
+                <p class="small-margin-bottom">Early wireframes of Robo Run</p>
+                <img class="img-responsive full-img"src="../../assets/nasa/process-robo-early.png" data-aos="fade-up" data-aos-duration="600"> 
+                <br><br>
+                <p class="small-margin-bottom">Then, once we were satisfied, we started mapping each part the screen, the potential user flows, and all possible interactions. <span class="highlight highlight-nasa">We had to make sure that the task did not have UX or UI problems as the purpose of the task was to assess anomaly response. No other hinderance should be present with the task.</span></p>
+                <img class="img-responsive full-img"src="../../assets/nasa/process-robo-final.png" data-aos="fade-up" data-aos-duration="600">
+                <img class="img-responsive full-img"src="../../assets/nasa/process-robo-errors.png" data-aos="fade-up" data-aos-duration="600">
+                <br><br>
+                <p class="small-margin-bottom">Lastlty, we created <span class="highlight highlight-nasa">resuable components for the whole task in order for future expansation and scalability. At the same time, we made sure our design was development ready as we'd immediately start programming this task and make sure it was live. </span></p>
+                <img class="img-responsive full-img"src="../../assets/nasa/process-robo-components.png" data-aos="fade-up" data-aos-duration="600">
+              </div>
+
+
             </section>
           </div>
 
