--- a/html/works/ubapp.html
+++ b/html/works/ubapp.html
@@ -12,6 +12,15 @@
     gtag('config', 'G-ZKFSQ82EQN');
     </script>
 
+    <!-- Microsoft clarity -->
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "nmdntxogv5");
+    </script>
+
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=false;">
