--- a/html/home.html
+++ b/html/home.html
@@ -82,7 +82,7 @@
       <div id="skills"></div>
       <h1 class="title"><span class="animated-text" style="--delay: 0.2s">Farhan</span> <span class="animated-text" style="--delay: 0.3s">Ahmed</span></h1>
       <div class="subtitle fade-in">
-          <p>Forward Thinking Designer</p>
+          <p>Helping enterprises design & develop MVP's, FAST </p>
       </div>
       <div class="arrow bounce" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000" data-aos-offset="-300"><a href="#my-work"><i class="fa fa-angle-down fa-3x" aria-hidden="true"></i></a>
       </div>
@@ -178,7 +178,7 @@
                   Game UX/UI Design, UX Research, Psychology
                 </h5>
                 <p class="card-content">
-                  Researching and designing solutions to reduce toxicity in online gaming communities.
+                  Researching and designing solutions to reduce toxicity in online gaming.  
                 </p>
               </div>
             </div>
