--- a/html/home.html
+++ b/html/home.html
@@ -95,7 +95,7 @@
     <br/>
     <br/>
 
-    <div class="marquee">
+    <!-- <div class="marquee">
       <ul class="marquee-content">
         <li> <img src="../assets/nasalogo.png"/></li>
         <li>2</li>
@@ -106,7 +106,7 @@
         <li>3</li>
         <li>4</li>
       </ul>
-    </div>
+    </div> -->
 
 
     <div class="container-fluid col-centered" id="my-work">
