--- a/html/works/nasa.html
+++ b/html/works/nasa.html
@@ -190,7 +190,7 @@
         <div class="col-lg-7 col-md-7 col-sm-10 col-xs-12 col-centered main-content first-section">
 
 
-          <section id="overview" class="group" data-aos="fade-up" data-aos-duration="600">
+          <section id="overview" class="group">
               <br>
               <h3>Overview</h3>
               <hr>
