--- a/html/home.html
+++ b/html/home.html
@@ -139,10 +139,10 @@
                   NASA: Design for Anomalies
                 </h4>
                 <h5 class="card-subtitle">
-                  Product Design, UX Engineering, Research
+                  Product Design, UX Engineering, UX Research
                 </h5>
                 <p class="card-content">
-                  I designed & developed tools for NASA researchers to simulate time-critical anomalies. 
+                  I designed & developed tools for NASA researchers to simulate anomalies. 
                 </p>
               </div>
             </div>
