--- a/html/works/nasa.html
+++ b/html/works/nasa.html
@@ -244,7 +244,7 @@
               </div>
           </section>
 
-          <div class="subgroup">
+          <div class="subgroup" data-aos="fade-up" data-aos-duration="600">
             <!-- 3 card -->
             <div class="row feature-row">
               <div class="col-lg-4 col-md-6 col-sm-12">
