--- a/html/works/ubapp.html
+++ b/html/works/ubapp.html
@@ -40,6 +40,8 @@
     <!-- Stylesheet -->
     <link rel = "stylesheet" type = "text/css" href = "../../css/style.css" />
     <link rel = "stylesheet" type = "text/css" href = "../../css/fonts.css" />
+    <link rel = "stylesheet" type = "text/css" href = "../../css/ub.css" />
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../../css/zoom.css" rel="stylesheet">
     <script src="../../js/transition.js"></script>
