up-interview-section-update

--- a/html/works/ubapp.html
+++ b/html/works/ubapp.html
@@ -40,7 +40,6 @@
     <!-- Stylesheet -->
     <link rel = "stylesheet" type = "text/css" href = "../../css/style.css" />
     <link rel = "stylesheet" type = "text/css" href = "../../css/fonts.css" />
-    <link rel = "stylesheet" type = "text/css" href = "../../css/ub.css" />
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../../css/zoom.css" rel="stylesheet">
@@ -140,7 +139,7 @@
         <div class="col-lg-7 col-md-7 col-sm-10 col-xs-12 col-centered main-content first-section">
 
 
-          <section id="overview" class="group" data-aos="fade-up" data-aos-duration="600">
+          <section id="overview" class="group" data-aos="fade-up">
               <h6>           </h6><br>
               <h3>Overview</h3>
               <hr>
@@ -331,7 +330,7 @@
                   <li><span class="highlight highlight-ubapp">Thoughts on the specific feature the task was utilizing </span></li>
 
                 </ul>
-                <img src="../../assets/ubapp/interview.png" data-aos="fade-up" data-aos-duration="600">  
+                <img class="img-responsive" src="../../assets/ubapp/interview.png" data-aos="fade-up" data-aos-duration="600">  
                 <br><br><br>
               </div>
 
