ub-mobile-image

--- a/html/works/ubapp.html
+++ b/html/works/ubapp.html
@@ -128,7 +128,7 @@
         </nav>
 
         <div class="bg bg-ubapp" data-aos="fade-up" data-aos-duration="600"></div>
-        <div class="jumbotron" data-aos="fade-up" data-aos-duration="600">
+        <div class="jumbotron">
           <div class="jumbotron-text">
           </div>
         </div>
@@ -139,7 +139,7 @@
         <div class="col-lg-7 col-md-7 col-sm-10 col-xs-12 col-centered main-content first-section">
 
 
-          <section id="overview" class="group" data-aos="fade-up">
+          <section id="overview" class="group">
               <h6>           </h6><br>
               <h3>Overview</h3>
               <hr>
