remove external website 2

--- a/html/works/nasa.html
+++ b/html/works/nasa.html
@@ -236,7 +236,7 @@
                   <h4></h4>
                   <h4>Client</h4>
                   <p>NASA Ames Research Center - HSI Division</p>
-                  <h4>External Website</h4>
+                  <!-- <h4>External Website</h4> -->
                   <!-- <p><a href="https://rocketgoboomboom.github.io/capstone-website/index.html" target="_blank" rel="noopener noreferrer">Project Website</a></p> -->
                   <br>
                   <br>
