--- a/html/works/fordscooter.html
+++ b/html/works/fordscooter.html
@@ -234,7 +234,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-7 col-lg-7">
 
                       <h5 class="video-feature-title video-feature-title-fordscooter">
-                        Integrated Relationsship
+                        Integrated Relationship
                       </h5>
 
                       <h6 class="video-feature-subtitle">
