--- a/html/works/busybee.html
+++ b/html/works/busybee.html
@@ -206,7 +206,7 @@
               <div class="row feature-row">
                   <div class=" col-xs-12 col-sm-6 col-md-5 col-lg-5">
                     <video autoplay muted loop class="video-features">
-                      <source src="../../assets/busy_bee/calltoaction.mp4"/>
+                      <source src="../../assets/busy_bee/calltoaction.MP4"/>
                     </video>
                   </div>
 
