--- a/html/works/nasaproject.html
+++ b/html/works/nasaproject.html
@@ -50,7 +50,7 @@
     <script src="https://use.fontawesome.com/a891bb0a11.js"></script>
     <script src="../../js/script.js" charset="utf-8"></script>
 
-    <script>
+    <!-- <script>
       function run() {
           var password = prompt("Password Please. This case study is password protected. If you'd like the password please email me kaizufarhan@gmail.com");
           if (password != 'NASA123') {
@@ -67,7 +67,7 @@
           }
       }
       window.onload = run; // Automatically run when the page loads
-    </script>
+    </script> -->
 
   </head>
 
