user-flow-busy-bee-added

--- a/html/works/busybee.html
+++ b/html/works/busybee.html
@@ -93,6 +93,7 @@
                 <a href="#solution">Solution - Busy Bee</a>
                 <ul class="nav nav-stacked">
                   <li><a href="#busybee">What is Busy Bee</a></li>
+                  <li><a href="#userflow">User Flow</a></li>
                   <li><a href="#interactions">Design Features</a></li>
                 </ul>
               </li>
@@ -268,6 +269,13 @@
                     </div>
                 </div>    
             </div>
+
+            <div id="userflow" class="subgroup">
+              <h4>User Flow</h4>
+              <p class="small-margin-bottom">User flow of Busy Bee with hi-fi designs.</p>
+
+              <img class="img-responsive full-img" src="../../assets/busy_bee/user-flow.png" alt="">
+          </div>
 
           <div id="interactions" class="subgroup">
               <h4>Design Features</h4>
