remove-lit-review-nasa

--- a/html/works/nasaproject.html
+++ b/html/works/nasaproject.html
@@ -113,7 +113,7 @@
               <li>
                 <a href="#research">Research</a>
                 <ul class="nav nav-stacked">
-                  <li><a href="#litreview">Literature Review</a></li>
+                  <!-- <li><a href="#litreview">Literature Review</a></li> -->
                   <li><a href="#interview">NASA Interviews</a></li>
                   <li><a href="#journeymaps">User Journey Maps</a></li>
                   <li><a href="#insights">Insights</a></li>
@@ -262,7 +262,7 @@
                   <br>
                 </div>
               </div>
-              <p class="p-center-wrapper"><a href="#high-fidelity-wireframes" target="_blank"><button class="btn black-button" name="button">Jump to Solution</button></a> </p>
+              <p class="p-center-wrapper"><a href="#solution-roborun" target="_blank"><button class="btn black-button" name="button">Jump to Solution</button></a> </p>
           </section>
 
 
@@ -282,22 +282,21 @@
               <div class="subgroup">
               </div>
 
-              <div id="litreview" class="subgroup">
+              <!-- <div id="litreview" class="subgroup">
                   <h4>Literature Review</h4>
-                  <!-- <img src="../../assets/nasa/nasa-project/me_researcher.png"> -->
                   <p class="small-margin-bottom">In order to create simulation of the qualities of anomalies, we first need to know what an anomaly is and study previous anomalies that resulted in disasters like the Columbia incident. So, my user researcher and I performed a lot of literature review which is often unconventional in the UX world but when you're in an unfamiliar domain where you need knowledge quickly, literature review is not a bad way to go.
                   <br>
                   </p>
                   <img class="img-responsive full-img" src="../../assets/nasa/literature-review.jpg" data-aos="fade-up" data-aos-duration="600">
                   <figcaption>NASA Columbia Accident Investigation Board report on the 2003 Columbia disaster</figcaption>  
                   <br><br>
-              </div>
+              </div> -->
 
 
               <div id="interview" class="subgroup">
                 <h4>Expert Interviews</h4>
                 <!-- <img src="../../assets/nasa/nasa-project/me_researcher.png"> -->
-                <p class="small-margin-bottom">My UX Researcher and I also performed <span class="highlight highlight-nasa">10 rounds of interviews with different NASA researchers who we are our primary end users.</span> The goal of the interviews were to uncover more information about the current processes and the approach to creating simulations of anomalies. 
+                <p class="small-margin-bottom">In order to create simulation of the qualities of anomalies, we first need to know what an anomaly is and study previous anomalies that resulted in disasters like the Columbia incident. So, my UX Researcher and I  performed <span class="highlight highlight-nasa">10 rounds of interviews with different NASA researchers who we were our primary end users.</span> The goal of the interviews were to uncover more information about the current processes and the approach to creating simulations of anomalies, as well as understanding more about anomalies.
                 <br>
                 </p>
                 <img class="img-responsive full-img" src="../../assets/nasa/analogous.jpg" data-aos="fade-up" data-aos-duration="600"> 
