Footer-message-adblock

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -157,7 +157,7 @@
             <a href="mailto:kaizufarhan@gmail.com" target="_blank"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
           </p>
           <br>
-          <!-- <p class="footer-text-small">Tony Yanfeng Jin © 2017-2018 All Rights Reserved</p> -->
+          <p class="footer-text-small">If parts of this page aren't rendering, please try turning off any ad blocker and reloading the page. Thank you for your understanding as I work to fix this issue!</p>
 
         </div>
       </div>
