adding-notification-message-button

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -78,6 +78,12 @@
         </ul>
       </div>
     </nav>
+
+    <!-- exclamation point button-->
+    <button id="info-button" class="info-button" onclick="toggleInfoMessage()">!</button>
+    <div id="info-message" class="info-message">
+      If parts of this page aren't rendering, please try turning off any ad blocker or switching to Safari / Microsoft Edge. Thank you for your understanding as I work to fix this issue!
+    </div>
     
     <div class="container-fluid ">
       <div class="row" id="about-content" data-aos="fade-up" data-aos-duration="600">
@@ -157,7 +163,6 @@
             <a href="mailto:kaizufarhan@gmail.com" target="_blank"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
           </p>
           <br>
-          <p class="footer-text-small">If parts of this page aren't rendering, please try turning off any ad blocker and reloading the page. Thank you for your understanding as I work to fix this issue!</p>
 
         </div>
       </div>
