removed-exclaimation-point

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -80,10 +80,10 @@
     </nav>
 
     <!-- exclamation point button-->
-    <button id="info-button" class="info-button" onclick="toggleInfoMessage()">!</button>
+    <!-- <button id="info-button" class="info-button" onclick="toggleInfoMessage()">!</button>
     <div id="info-message" class="info-message">
       If parts of this page aren't rendering, please try turning off any ad blocker or switching to Safari / Microsoft Edge. Thank you for your understanding as I work to fix this issue!
-    </div>
+    </div> -->
     
     <div class="container-fluid ">
       <div class="row" id="about-content" data-aos="fade-up" data-aos-duration="600">
