--- a/html/home.html
+++ b/html/home.html
@@ -108,10 +108,10 @@
 
 
     <!-- exclamation point button-->
-    <button id="info-button" class="info-button" onclick="toggleInfoMessage()">!</button>
+    <!-- <button id="info-button" class="info-button" onclick="toggleInfoMessage()">!</button>
     <div id="info-message" class="info-message">
       If parts of this page aren't rendering, please try turning off any ad blocker or switching to Safari / Microsoft Edge. Thank you for your understanding as I work to fix this issue!
-    </div>
+    </div> -->
 
 
 
