--- a/html/about-me.html
+++ b/html/about-me.html
@@ -63,7 +63,6 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapsible-nav">
-          <span class="sr-only">切换导航</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -91,7 +90,7 @@
           <div class="row">
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
               <!-- Add different photos of activities and make the page more fun :) -->
-              <h2>Hi, I'm Farhan o/</h2>
+              <h2>Hi, I'm Farhan!</h2>
               <h6><span class="h6-T">Forward </span>Thinking Designer</h6>
               <br>
               <br>
@@ -100,10 +99,11 @@
                 <br><br>
               </div>
               <div class="subgroup">
-                <h5 class="about-h5">Designer & Builder</h5>
+                <h5 class="about-h5">Background + Design Philosophy</h5>
+                <br>
                 <p class="small-margin-bottom">I am a forward-thinking designer dedicated to creating works that improve people's lives.<br><br>
 
-                  <span class="highlight highlight-about">I hold a Bachelor's degree in Cognitive Science with a minor in Computer Science from the University at Buffalo</span>, and a <span class="highlight highlight-about">Master's degree in Human-Computer Interaction from Carnegie Mellon University.</span> My professional experience includes roles as a Product Designer, UX Engineer, and Web Developer, gained during <span class="highlight highlight-about">my time at NASA Ames Research Center and National Fuel Gas.</span>
+                  I hold a <span class="highlight highlight-about">Bachelor's degree in Cognitive Science with a minor in Computer Science from the University at Buffalo</span>, and a <span class="highlight highlight-about">Master's degree in Human-Computer Interaction from Carnegie Mellon University.</span> My professional experience includes roles as a Product Designer, UX/UI Designer, and Web Developer, gained during my time at <span class="highlight highlight-about">NASA Ames Research Center</span> and <span class="highlight highlight-about">National Fuel Gas.</span>
                   <br><br>
                 
                   I am very much a big-picture thinker and enjoy working on products end to end, from research all the way to development. I bring unique, cross-functional insights to every project with my background in research, programming, and design. 
@@ -113,6 +113,7 @@
               <!-- <br> -->
               <div class="subgroup">
                 <h5 class="about-h5">Values</h5>
+                <br>
                 <p class="small-margin-bottom">I believe values are what makes or breaks a person. Whether it's in my personal life or my professional career, these values hold a great importance to me. <br><br>
 
                   <span class="highlight highlight-about">Humility:</span> Being open minded and admitting when you're wrong is an important factor to me as a person. It allows me to grow in many different aspects as a person and all the roles I play in my life.  <span class="highlight highlight-about">It doesn't matter where you stand in life, anyone and everyone can be wrong, and that's ok.</span> <br><br>
@@ -125,13 +126,13 @@
               </div>
               <!-- <br> -->
               <!-- <br> -->
-              <div class="subgroup">
+              <!-- <div class="subgroup">
                 <h5 class="about-h5">Hobbies & Interests</h5>
                 <p><span class="highlight highlight-about">Going to the Gym:</span> Everyday I go to the gym and it's one of my favorite parts of my day. My favorite compound movement is the deadlift! I also really enjoy bench pressing although I can't say I'm all that impressive at it. As for muscle groups, I really enjoy bicep-oriented movements such as behind the back cable curls, reverse curls, and the classic barbell curls. <br><br>
 
                   <span class="highlight highlight-about">Trying New Things:</span> I love exploring new places, trying new experiences, and tasting different foods. I consider myself adventurous and willing to step outside my comfort zone, as long as it doesn't compromise my values.
               </p>
-              </div>
+              </div> -->
             </div>
 
             <div class="col-side col-lg-5 col-md-5 col-sm-5 col-xs-12">
