--- a/html/home.html
+++ b/html/home.html
@@ -165,6 +165,23 @@
         <h4 style="color: #aaaaaa;">My Works</h4>
         <br>
 
+        <a href="./works/ihHealthExtras.html">
+          <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
+            <div class="card" style="background-image: url(../assets/ihHealthExtras/pictures/thumnail\ -\ health\ extras.png); background-size: contain; background-repeat: no-repeat;">
+              <div class="card-pants">
+                <h4 class="card-title">
+                  Digitizing Health Benefits
+                </h4>
+                <h5 class="card-subtitle">
+                  UX/UI Design, Design System, Web Design
+                </h5>
+                <p class="card-content">
+                 Allowing policy holders to track & manage their health reward benefits through a few clicks.
+                </p>
+              </div>
+            </div>
+          </li>
+        </a>
 
         <a href="./works/busybee.html">
           <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
