updated-about-me-and health extras

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -103,7 +103,7 @@
                 <br>
                 <p class="small-margin-bottom">I am a forward-thinking designer dedicated to creating works that improve people's lives.<br><br>
 
-                  I hold a <span class="highlight highlight-about">Bachelor's degree in Cognitive Science with a minor in Computer Science from the University at Buffalo</span>, and a <span class="highlight highlight-about">Master's degree in Human-Computer Interaction from Carnegie Mellon University.</span> My professional experience includes roles as a Product Designer, UX/UI Designer, and Web Developer, gained during my time at <span class="highlight highlight-about">NASA Ames Research Center</span> and <span class="highlight highlight-about">National Fuel Gas.</span>
+                  I hold a <span class="highlight highlight-about">Bachelor's degree in Cognitive Science with a minor in Computer Science from the University at Buffalo</span>, and a <span class="highlight highlight-about">Master's degree in Human-Computer Interaction from Carnegie Mellon University.</span> I'm currently a UX/UI Designer at <span class="highlight highlight-about">Independent Health Association</span> and previously I was at <span class="highlight highlight-about">NASA Ames Research Center</span> as a Product Designer.
                   <br><br>
                 
                   I am very much a big-picture thinker and enjoy working on products end to end, from research all the way to development. I bring unique, cross-functional insights to every project with my background in research, programming, and design. 
